--- a/packages/ui/src/css/variables.css
+++ b/packages/ui/src/css/variables.css
@@ -156,4 +156,7 @@
   --color-outline-danger: var(--color-red-100);
 
   --color-shadow: rgba(0, 0, 0, 0.2);
+
+  --transition-in: all 0.2s ease-in;
+  --transition-out: all 0.17s ease-out;
 }
